[package]
name = "aoc"
version = "0.6.3"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "aoc"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
hashbrown = "0.13.1"
regex = "1.7.0"
itertools = "0.10.5"
anyhow = "1.0.66"

[profile.release]
lto = true
codegen-units = 1
debug = true
opt-level = 3
